samples/_failures_safe/1761197411_c1df9b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_39b7e65a.c: In function ‘main’:
./samples/SAFE/__tmp_39b7e65a.c:145:36: error: expected ‘)’ at end of input
  145 |     if (!validate_filename(filename
      |                           ~        ^
      |                                    )
./samples/SAFE/__tmp_39b7e65a.c:145:5: error: expected declaration or statement at end of input
  145 |     if (!validate_filename(filename
      |     ^~
